removed some PMD Errors
SVN-Revision: 2929